<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_stars"
            android:icon="@drawable/icon_estrella"
            android:title="@string/menu_stars" />
        <item
            android:id="@+id/fragment_planets"
            android:icon="@drawable/icon_planet"
            android:title="@string/menu_planets" />
        <item
            android:id="@+id/nav_ships"
            android:icon="@drawable/icon_ship"
            android:title="@string/menu_ships" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/icon_ciencia"
            android:title="@string/menu_science" />
        <item
            android:id="@+id/nav_diplomacy"
            android:icon="@drawable/icon_diplo"
            android:title="@string/menu_diplomacy" />
        <item
            android:id="@+id/nav_builds"
            android:icon="@drawable/icon_rayo"
            android:title="@string/menu_builds" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/sistemFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Origen" />


    </group>
</menu>