<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/idFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:foreground="@drawable/portada"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/idLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/idPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:onClick="runSector"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/idNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/roundedbutton"
            android:onClick="runSpecies"
            android:text="@string/start_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>